# Summer-Breeze

./: .gitignore  LICENSE  README.md  pyproject.toml  summerbreeze.py
.github/workflows/: ci.yml
menu_versions/: .gitkeep
tests/: test_summerbreeze.py
