[project]
name = "summer-breeze"
version = "1.0.0"
description = "A user-friendly CLI tool for managing ROMs on your SummerCart64 flash cart"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
